hogehogeを追加しました

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <section class="hogehoge">
+    <h1 class="hogehoge_txt">hogehoge</h1>
+  </section>
 </body>
 </html>
